Remove fis-gtm repo install due to old versions in repo
See message: https://groups.google.com/g/hardhats/c/PCjFcOgLxps/m/ZkmrVL1dAgAJ

This is a bug that has long ago been fixed, but the buggy version of
mupip has not been updated in a while now.

--- a/New/AdmitPatients.html
+++ b/New/AdmitPatients.html
@@ -510,7 +510,7 @@ No HINQ string created entry not entered.completed.
 Updating visit status...completed.</pre>
 <p>Now, if we open CPRS, we can now see the wards:</p>
 <figure>
-<img src="images/AdmitPatients/patient_selection_with_ward.png" class="align-center" />
+<img src="images/AdmitPatients/patient_selection_with_ward.png" class="align-center" alt="" />
 </figure>
 <p>Let's discuss some the prompts:</p>
 <pre>ADMITTING REGULATION: <strong>??</strong> 
@@ -540,7 +540,7 @@ Updating visit status...completed.</pre>
    6            NON-VETERAN     ADMISSION     ACTIVE
    7            WAITING LIST     ADMISSION     ACTIVE
    8            PBC     ADMISSION     ACTIVE</pre>
-<p>This list is customizable from menu option &quot;Edit Bed Control Movement Types&quot; in &quot;ADT System Definition Menu&quot;. It is stored in File 405.1.</p>
+<p>This list is customizable from menu option "Edit Bed Control Movement Types" in "ADT System Definition Menu". It is stored in File 405.1.</p>
 <pre>SOURCE OF ADMISSION: <strong>??</strong> 
    This field contains the source of admission of the veteran, or
    where he was admitted to the hospital from, i.e. community, other
@@ -557,31 +557,31 @@ Updating visit status...completed.</pre>
 <p>Lastly, before we end this topic, let's display some reports after we admitted the patients.</p>
 <p>If you go back one level up and go to the <code>ADT Manager Menu</code>, then navigate to <code>ADT Output Reports</code>, you will see a large amount of reports. I ran the Gains and Losses report again after a day has elapsed to show you what the new Gains and Losses report looks like:</p>
 <figure>
-<img src="images/AdmitPatients/gnl01.png" class="align-center" />
+<img src="images/AdmitPatients/gnl01.png" class="align-center" alt="" />
 </figure>
 <figure>
-<img src="images/AdmitPatients/gnl02.png" class="align-center" />
+<img src="images/AdmitPatients/gnl02.png" class="align-center" alt="" />
 </figure>
 <figure>
-<img src="images/AdmitPatients/gnl03.png" class="align-center" />
+<img src="images/AdmitPatients/gnl03.png" class="align-center" alt="" />
 </figure>
 <figure>
-<img src="images/AdmitPatients/gnl04.png" class="align-center" />
+<img src="images/AdmitPatients/gnl04.png" class="align-center" alt="" />
 </figure>
 <p>If you go to the <code>Inpatient/Lodger Report Menu...</code>, you can run the <code>Inpatient Listing</code> and <code>Inpatient Roster</code> reports. The reports are similar; the Roster is more compact though.</p>
 <p>First, the Inpatient Listing:</p>
 <figure>
-<img src="images/AdmitPatients/iplisting1.png" class="align-center" />
+<img src="images/AdmitPatients/iplisting1.png" class="align-center" alt="" />
 </figure>
 <figure>
-<img src="images/AdmitPatients/iplisting2.png" class="align-center" />
+<img src="images/AdmitPatients/iplisting2.png" class="align-center" alt="" />
 </figure>
 <p>Inpatient Roster:</p>
 <figure>
-<img src="images/AdmitPatients/iproster1.png" class="align-center" />
+<img src="images/AdmitPatients/iproster1.png" class="align-center" alt="" />
 </figure>
 <figure>
-<img src="images/AdmitPatients/iproster2.png" class="align-center" />
+<img src="images/AdmitPatients/iproster2.png" class="align-center" alt="" />
 </figure>
 <p>This is the end of how to configure a hospital. Go back to <a href="../PROJECTSmain.html">Projects</a> to choose another topic.</p>
 </body>
