--- a/New/InstallEWD3.html
+++ b/New/InstallEWD3.html
@@ -61,7 +61,7 @@ $ cp -nR node_modules/ewd-vista-bedboard/www/* www/ewd-vista/
 $ cp node_modules/ewd-xpress/example/ewd-xpress-gtm.js ./ewd-xpress.js
 $ node ewd-xpress.js</code></div>
 <h1 id="test-your-ewd3-apps">Test Your EWD3 Apps</h1>
-<p><a href="http://localhost:8080/ewd-vista/" class="uri">http://localhost:8080/ewd-vista/</a></p>
-<p><a href="http://localhost:8080/ewd-xpress-monitor/" class="uri">http://localhost:8080/ewd-xpress-monitor/</a></p>
+<p><a href="http://localhost:8080/ewd-vista/">http://localhost:8080/ewd-vista/</a></p>
+<p><a href="http://localhost:8080/ewd-xpress-monitor/">http://localhost:8080/ewd-xpress-monitor/</a></p>
 </body>
 </html>
