--- a/New/SetupClinics.html
+++ b/New/SetupClinics.html
@@ -18,14 +18,14 @@
 <p>If you have reached this point, it means that you have finished <a href="./InitializeVistA.html">VistA Initialization</a>.</p>
 <p>If you logged in to CPRS, and tried to create an encounter (a.k.a. Visit), by clicking on this:</p>
 <figure>
-<img src="images/SetupClinics/select_visit.png" class="align-center" />
+<img src="images/SetupClinics/select_visit.png" class="align-center" alt="" />
 </figure>
 <p>You will see the following:</p>
 <figure>
-<img src="images/SetupClinics/new_encounter.png" class="align-center" />
+<img src="images/SetupClinics/new_encounter.png" class="align-center" alt="" />
 </figure>
 <p>We have users populated; but we do not have any clinics to choose for a visit location.</p>
-<p>Before we get started, we need to define what &quot;clinic&quot; means. It's not a physical building; nor it is a specific room or wing in a hospital. It really stands for an administrive unit in a specific speciality at which patients can be scheduled for appointments. &quot;Clinic&quot; in English also means the entire building in which these specialties are housed; but that's not what it means in VistA.</p>
+<p>Before we get started, we need to define what "clinic" means. It's not a physical building; nor it is a specific room or wing in a hospital. It really stands for an administrive unit in a specific speciality at which patients can be scheduled for appointments. "Clinic" in English also means the entire building in which these specialties are housed; but that's not what it means in VistA.</p>
 <p>Examples of VistA Clinics:</p>
 <ul>
 <li>Cardiology Clinic</li>
@@ -34,7 +34,7 @@
 <li>Immunization Update Clinic</li>
 <li>Public Nurse Visits Clinic</li>
 </ul>
-<p>In order for us to create a new clinic, we need to log-in as a system manager into the &quot;roll and scroll&quot; and set-up a new clinic. To get to the menu, you need to go from:</p>
+<p>In order for us to create a new clinic, we need to log-in as a system manager into the "roll and scroll" and set-up a new clinic. To get to the menu, you need to go from:</p>
 <div class="code"><code>
  Core Applications &rarr; Scheduling Manager's Menu &rarr; Supervisor Menu &rarr; Set up a Clinic</code></div>
 <p>Here's a walk through the menu system showing you getting there:</p>
@@ -166,7 +166,7 @@ Select Supervisor Menu <TEST ACCOUNT> Option: <strong>Set</strong> up a Clinic</
 <li>OVERBOOKS/DAY MAXIMUM</li>
 <li>LENGTH OF APP'T</li>
 </ul>
-<p>You will be asked first a bunch of questions, then you will come to a section called &quot;Availability&quot; in which you set-up the number of patient slots for your clinic. We will pause there for an explanation of the syntax.</p>
+<p>You will be asked first a bunch of questions, then you will come to a section called "Availability" in which you set-up the number of patient slots for your clinic. We will pause there for an explanation of the syntax.</p>
 <p>Text in italics is commentary. As always, ? and ?? will show you more information on each field.</p>
 <div class="code"><code>Select CLINIC NAME: <strong>CARDIOLOGY</strong>
   Are you adding 'CARDIOLOGY' as a new HOSPITAL LOCATION? No// <strong>Y</strong>  (Yes)
@@ -244,8 +244,8 @@ DISPLAY INCREMENTS PER HOUR: 4// <strong>2</strong>  30-MIN </code></div>
 <div class="code"><code>[5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5]</code></div>
 <p>When you use up one slot, what's left is 4 in the specific slot:</p>
 <div class="code"><code>[5] [4] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5] [5]</code></div>
-<p>The other thing to keep in mind is that you book a clinic by day of week, even though it doesn't look like it. You actually put a day, and it will ask you if it can use this pattern for all future appointments for this day of week. I wrote this document on a Monday, so putting &quot;T&quot; will stand for Mondays, and &quot;T+1&quot; will stand for Tuesdays, etc.</p>
-<p>You are asked for &quot;TIME&quot; multiple times. The idea is that you can go from--say--9am to 12pm, and then from 1pm to 5pm.</p>
+<p>The other thing to keep in mind is that you book a clinic by day of week, even though it doesn't look like it. You actually put a day, and it will ask you if it can use this pattern for all future appointments for this day of week. I wrote this document on a Monday, so putting "T" will stand for Mondays, and "T+1" will stand for Tuesdays, etc.</p>
+<p>You are asked for "TIME" multiple times. The idea is that you can go from--say--9am to 12pm, and then from 1pm to 5pm.</p>
 <p>With these explanations behind us, here is a simple set-up:</p>
 <div class="code"><code>AVAILABILITY DATE: <strong>T</strong>  (MAY 07, 2018)
 
@@ -322,7 +322,7 @@ AVAILABILITY DATE: <strong>&lt;enter&gt;</strong>
 Select CLINIC NAME:<strong>&lt;enter&gt;</strong></code></div>
 <p>At this point, we are done with creating a clinic. If you look in CPRS, you will find that the clinic now exists, and you can create a visit in CPRS:</p>
 <figure>
-<img src="images/SetupClinics/use_clinic.gif" class="align-center" />
+<img src="images/SetupClinics/use_clinic.gif" class="align-center" alt="" />
 </figure>
 </body>
 </html>
